# evrec

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  example.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: container.yml  test.yml
clients/: test.pem
evrec/: __init__.py  keys.py  server.py  settings.py  validator.py
evrec/schema/: new_qname.json
tests/: test_mqtt.py
