[tool.poetry]
name = "evrec"
version = "1.1.0.dev1"
description = "DNS TAPIR Event Receiver"
authors = ["Jakob Schlyter <jakob@kirei.se>"]
readme = "README.md"

[tool.poetry.scripts]
evrec_server = "evrec.server:main"

[tool.poetry.dependencies]
python = "^3.12"
dnstapir = {git = "https://github.com/dnstapir/python-dnstapir.git", rev = "v1.2.2", extras = ["keymanager", "opentelemetry"]}
pydantic-settings = "^2.7.0"
aiomqtt = "^2.2.0"
jwcrypto = "^1.5.6"
jsonformatter = "^0.3.2"
jsonschema = {extras = ["format"], version = ">=4.22.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = ">=0.8.0"
pytest-ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
    "evrec",
    "dnstapir"
]
extra-standard-library = [
    "tomllib",
]
combine-as-imports = true
split-on-trailing-comma = false
